--- a/notice.html
+++ b/notice.html
@@ -15,7 +15,7 @@
         <li><a href="index.html">ホーム</a></li>
         <li><a href="https://www.youtube.com/@KaigaraKun">YouTubeチャンネル</a></li>
         <li><a href="notice.html">お知らせ</a></li>
-        <li><a href="#">お問い合わせ</a></li>
+        <li><a href="https://twitter.com/kaigaratekiyugi">お問い合わせ</a></li>
       </ul>
       <div class="burger">
         <div class="line1"></div>
