--- a/index.html
+++ b/index.html
@@ -25,13 +25,33 @@
     </nav>
 
     <h1>YouTube最新動画一覧</h1>
-    <iframe width="500" height="300" src="https://www.youtube.com/embed/shhWQVQA6YI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    <iframe width="500" height="300" src="https://www.youtube.com/embed/bWVnWyOgG8M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    <iframe width="500" height="300" src="https://www.youtube.com/embed/AjkRYAkZ580" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <div class="youtube">
+      <iframe width="500" height="300" src="https://www.youtube.com/embed/shhWQVQA6YI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </div>
+    <div class="youtube">
+      <iframe width="500" height="300" src="https://www.youtube.com/embed/bWVnWyOgG8M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </div>
+    <div class="youtube">
+     
+    </div>
+    <div class="youtube">
+     
+    </div>
+    <div class="youtube">
+      <iframe width="500" height="300" src="https://www.youtube.com/embed/AjkRYAkZ580" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </div>
     <iframe width="500" height="300" src="https://www.youtube.com/embed/cv4d38FHBWQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-
+    <div class="youtube">
 
     <style>
+      .youtube {
+  width: 100%;
+  aspect-ratio: 16 / 9;
+}
+.youtube iframe {
+  width: 100%;
+  height: 100%;
+}
         h1{
             text-align: justify
         }
