--- a/notice.html
+++ b/notice.html
@@ -31,6 +31,10 @@
         <ul class="slider">
           <li><a href="notice1.html"><span>2023/03/25</span>貝殻的遊戯 公式サイトが出来ました！</a></li>
         </ul>
+
+        <ul class="slider">
+          <li><a href="notice2.html"><span>2023/03/26</span>YouTube動画のサイズをレスポンシブ対応にしました。</a></li>
+        </ul>
           
       
       <!--/wrapper--></div>
