--- a/notice2.html
+++ b/notice2.html
@@ -7,10 +7,10 @@
     <title>お知らせ - 貝殻的遊戯 公式サイトが出来ました！</title>
 </head>
 <body>
-    <h1>お知らせ(2023/03/25)</h1>
-    <h2>タイトル：貝殻的遊戯 公式サイトが出来ました！</h2>
+    <h1>お知らせ (2023/03/26)</h1>
+    <h2>タイトル：YouTube動画のサイズをレスポンシブ対応にしました。</h2>
     <h1>お知らせ内容</h1>
-    <h3>貝殻的遊戯 公式サイトでは、YouTubeで投稿した動画を公式サイトでも見られるようします！</h3>
+    <h3>ホームにあるYouTube動画のサイズをレスポンシブ対応にしました！PC版は動画サイズが大きくなり、モバイル版は、動画サイズが小さくなります。</h3>
 
     <div class="button008">
         <a href="notice.html">お知らせページへ戻る</a>
