--- a/notice1.html
+++ b/notice1.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>お知らせ - 貝殻的遊戯 公式サイトが出来ました！</title>
+    <link rel="stylesheet" href="app.json">
 </head>
 <body>
     <h1>お知らせ(2023/03/25)</h1>
