--- a/notice2.html
+++ b/notice2.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="app.json">
     <title>お知らせ - 貝殻的遊戯 公式サイトが出来ました！</title>
 </head>
 <body>
