--- a/notice.html
+++ b/notice.html
@@ -14,9 +14,11 @@
       </div>
       <ul class="nav-links">
         <li><a href="index.html">ホーム</a></li>
+        <li><a href="self-introduction.html">自己紹介</a></li>
         <li><a href="https://www.youtube.com/@KaigaraKun">YouTubeチャンネル</a></li>
         <li><a href="notice.html">お知らせ</a></li>
         <li><a href="https://twitter.com/messages/1550766622071476224-1581196100421423105">お問い合わせ</a></li>
+        <li><a href="site-operator.html">サイト運営者</a></li>
       </ul>
       <div class="burger">
         <div class="line1"></div>
